Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
7.0.0
Description
Found by R sanitizer builds:
2022-04-24T21:14:42.6518411Z Start test: `as_datetime()` 2022-04-24T21:14:42.6519247Z /usr/bin/../include/c++/v1/memory:2113:18: runtime error: load of value 16, which is not a valid value for type 'arrow::compute::AssumeTimezoneOptions::Ambiguous' 2022-04-24T21:14:42.6521313Z #0 0x7fc8ecdafbb1 in std::__1::__compressed_pair_elem<arrow::compute::AssumeTimezoneOptions, 1, false>::__compressed_pair_elem<std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> >&&, arrow::compute::AssumeTimezoneOptions::Ambiguous&, arrow::compute::AssumeTimezoneOptions::Nonexistent&, 0ul, 1ul, 2ul>(std::__1::piecewise_construct_t, std::__1::tuple<std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> >&&, arrow::compute::AssumeTimezoneOptions::Ambiguous&, arrow::compute::AssumeTimezoneOptions::Nonexistent&>, std::__1::__tuple_indices<0ul, 1ul, 2ul>) /usr/bin/../include/c++/v1/memory:2113:18 2022-04-24T21:14:42.6526869Z #1 0x7fc8ecdaf027 in std::__1::__compressed_pair<std::__1::allocator<arrow::compute::AssumeTimezoneOptions>, arrow::compute::AssumeTimezoneOptions>::__compressed_pair<std::__1::allocator<arrow::compute::AssumeTimezoneOptions>&, std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> >&&, arrow::compute::AssumeTimezoneOptions::Ambiguous&, arrow::compute::AssumeTimezoneOptions::Nonexistent&>(std::__1::piecewise_construct_t, std::__1::tuple<std::__1::allocator<arrow::compute::AssumeTimezoneOptions>&>, std::__1::tuple<std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> >&&, arrow::compute::AssumeTimezoneOptions::Ambiguous&, arrow::compute::AssumeTimezoneOptions::Nonexistent&>) /usr/bin/../include/c++/v1/memory:2197:9 2022-04-24T21:14:42.6530083Z #2 0x7fc8ecdae891 in std::__1::__shared_ptr_emplace<arrow::compute::AssumeTimezoneOptions, std::__1::allocator<arrow::compute::AssumeTimezoneOptions> >::__shared_ptr_emplace<std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> >, arrow::compute::AssumeTimezoneOptions::Ambiguous&, arrow::compute::AssumeTimezoneOptions::Nonexistent&>(std::__1::allocator<arrow::compute::AssumeTimezoneOptions>, std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> >&&, arrow::compute::AssumeTimezoneOptions::Ambiguous&, arrow::compute::AssumeTimezoneOptions::Nonexistent&) /usr/bin/../include/c++/v1/memory:3470:16 2022-04-24T21:14:42.6533732Z #3 0x7fc8ecd81777 in std::__1::enable_if<!(is_array<arrow::compute::AssumeTimezoneOptions>::value), std::__1::shared_ptr<arrow::compute::AssumeTimezoneOptions> >::type std::__1::make_shared<arrow::compute::AssumeTimezoneOptions, std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> >, arrow::compute::AssumeTimezoneOptions::Ambiguous&, arrow::compute::AssumeTimezoneOptions::Nonexistent&>(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> >&&, arrow::compute::AssumeTimezoneOptions::Ambiguous&, arrow::compute::AssumeTimezoneOptions::Nonexistent&) /usr/bin/../include/c++/v1/memory:4291:26 2022-04-24T21:14:42.6535804Z #4 0x7fc8ecd6f6de in make_compute_options(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> >, cpp11::r_vector<SEXPREC*>) /tmp/RtmpHQX0ba/R.INSTALLb28193b79cc/arrow/src/compute.cpp:406:12
Attachments
Issue Links
- supercedes
-
ARROW-16298 [C++] [R] Sanitizer nightly, on `as_datetime()` test
-
- Closed
-
- links to