ARROW-16313: [R] Ensure assume_timezone options are always initialized